# simple-payments-engine

./: .gitignore  Cargo.toml  LICENSE  README.md
fixtures/: comprehensive_test_with_errors.csv
src/: domain.rs  main.rs  output_printer.rs  use_case.rs
src/domain/: account_module.rs  payments_engine.rs  transaction_module.rs
src/domain/account_module/: account.rs  account_repository.rs
src/domain/payments_engine/: operation_request.rs  valid_operation_request.rs
src/domain/payments_engine/valid_operation_request/: builder.rs  validator.rs
src/domain/transaction_module/: transaction.rs  transaction_repository.rs
src/use_case/: process_from_csv_use_case.rs
src/use_case/process_from_csv_use_case/: process_from_csv_use_case_test.rs
