[package]
name = "simple-payments-engine"
version = "1.0.0"
edition = "2024"
exclude = ["fixtures/*"]

[dependencies]
rust_decimal = { version = "1.37.2", features = ["serde"] }
csv = "1.3.1"
csv-async = "1.3.0"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.1", features = ["full"] }
tokio-util = { version = "0.7.14", features = ["compat"] }
futures = "0.3.31"
log = "0.4.27"
env_logger = "0.11.7"